# rurl

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  persistence.rs  tui.rs
src/actions/: actions.rs  mod.rs
src/components/: component.rs  content.rs  footer.rs  header.rs  layout.rs  mod.rs  modal.rs  sidebar.rs
src/theme/: mod.rs
